[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "themisasi"
description = "reads and plots THEMIS ASI video data of aurora."
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["all-sky-camera", "aurora"]
classifiers = [
"Development Status :: 5 - Production/Stable",
"Environment :: Console",
"Intended Audience :: Science/Research",
"Operating System :: OS Independent",
"Programming Language :: Python :: 3",
"Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
"numpy",
"xarray",
"requests",
"python-dateutil",
"scipy",
"cdflib",
]
dynamic = ["readme", "version"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "themisasi.__version__"}


[project.optional-dependencies]
tests = ["pytest", "pytest-asyncio", "mypy"]
plot = [
    "matplotlib",
    "seaborn",
]
io = [
    "netcdf4",
    "h5py",
]
fov = [
    "histutils",
    "pymap3d",
]
cameras = [
    "dascutils",
]

[tool.black]
line-length = 99

[tool.mypy]
files = ["."]

ignore_missing_imports = true
allow_redefinition = true
install_types = true
exclude = ["^build([/\\\\]|$)"]
