[metadata]
name = themisasi
version = 0.8.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = reads and plots THEMIS ASI video data of aurora.
url = https://github.com/scivision/themisasi
keywords =
  all-sky-camera
  aurora
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  pip >= 10
  setuptools >= 38.6.0
  twine >= 1.11.0
  wheel >= 0.31.0
include_package_data = True
packages = find:
install_requires =
  numpy>=1.13
  xarray
  requests
  python-dateutil
  cdflib>=0.3.6

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn
io =
  netcdf4
  h5py
fov =
  scipy>=0.17
  histutils
  pymap3d
cameras =
  dascutils


[options.entry_points]
console_scripts =
  PlotThemis = PlotThemis:main
  PlotThemisPixels = PlotThemisPixels:main
  DownloadThemis = DownloadThemis:main

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/,src/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*
  */src/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
