[metadata]
name = themisasi
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = reads and plots THEMIS ASI video data of aurora.
url = https://github.com/space-physics/themisasi
keywords =
  all-sky-camera
  aurora
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: AsyncIO
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  pip >= 10
  setuptools >= 38.6.0
packages = find:
scripts =
  DascThemisFOV.py
  DownloadThemis.py
  PlotThemis.py
  ThemisRadec.py
  DascThemisSlice.py
  PlotCameraResponse.py
  PlotThemisPixels.py
install_requires =
  numpy>=1.13
  xarray
  aiohttp-requests
  python-dateutil
  scipy>=0.17
  cdflib>=0.3.10

[options.extras_require]
tests =
  pytest >= 3.9
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn
io =
  netcdf4
  h5py
fov =
  histutils
  pymap3d
cameras =
  dascutils


[options.entry_points]
console_scripts =
  PlotThemis = PlotThemis:main
  PlotThemisPixels = PlotThemisPixels:main
  DownloadThemis = DownloadThemis:main
