[metadata]
name = themisasi
version = 1.1.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = reads and plots THEMIS ASI video data of aurora.
url = https://github.com/space-physics/themisasi
keywords =
  all-sky-camera
  aurora
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
install_requires =
  numpy>=1.13
  xarray
  requests
  python-dateutil
  scipy>=0.17
  cdflib>=0.3.13
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest >= 3.9
  pytest-asyncio
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
  seaborn
io =
  netcdf4
  h5py
fov =
  histutils
  pymap3d
cameras =
  dascutils

[options.entry_points]
console_scripts =
  themisasi_pixels = themisasi.pixels:cli
  themisasi_video = themisasi.video:cli
  themisasi_radec = themisasi.radec:cli
  themisasi_download = themisasi.web:cli
